<resources>
    <string name="app_name">SixJars</string>
    <string name="action_settings">Settings</string>
    <string name="img_of_bottle">img of bottle</string>
    <string name="appwidget_text">JARS</string>
    <string name="nec_text" translatable="false">N\nE\nC</string>
    <string name="ffa_text" translatable="false">F\nF\nA</string>
    <string name="rdu_text" translatable="false">E\nD\nU</string>
    <string name="ltss_text" translatable="false">L\nT\nS\nS</string>
    <string name="play_text" translatable="false">P\nL\nA\nY</string>
    <string name="give_text" translatable="false">G\n I\nV\nE</string>
    <string name="configure">Widget name</string>
    <string name="add_widget">Add widget</string>
    <string name="item_name_of_jar">Name Of Jar</string>
    <string name="item_balance_text">%1$s $</string>
    <string name="item_description_text">Description of JAR and some useful information</string>
    <string name="db_jar_id_NEC" translatable="false">NEC</string>
    <string name="db_jar_id_PLAY" translatable="false">PLAY</string>
    <string name="db_jar_id_GIVE" translatable="false">GIVE</string>
    <string name="db_jar_id_EDU" translatable="false">EDU</string>
    <string name="db_jar_id_LTSS" translatable="false">LTSS</string>
    <string name="db_jar_id_FFA" translatable="false">FFA</string>
    <string name="db_jar_name_NEC">Necessity Account</string>
    <string name="db_jar_name_PLAY">Play Account</string>
    <string name="db_jar_name_GIVE">Give Account</string>
    <string name="db_jar_name_EDU">Education Account</string>
    <string name="db_jar_name_LTSS">Long Term Saving for Spending Account</string>
    <string name="db_jar_name_FFA">Financial Freedom Account</string>
    <string name="db_jar_info_EDU">This Jar is for EDUcational stuff, like payments for colledge or tutor, educational books, movies and trainings etc.</string>
    <string name="db_jar_info_FFA">This Jar is a guaranty of your financial wellness. Cash from this jar must be untouchable in any case, just for investments or passive gain.</string>
    <string name="db_jar_info_GIVE">Cash from this Jar is for charity or gifts.</string>
    <string name="db_jar_info_LTSS">This account is used for big purchase (like a car, vacation on Bali, new teeth…) or may be a buffer for your financial safety.</string>
    <string name="db_jar_info_NEC">Cash in this Jar is for NECessities - food, rent, transport, medicine, clothing etc.</string>
    <string name="db_jar_info_PLAY">This Jar is for FUN, you can spend cash from it in a restaurant or go play bowling, take a trip to Disneyland etc.</string>
    <string name="item_id_of_jar">ID of Jar</string>
    <string name="item_percentage_text">%1$d %% of JARS</string>
    <string name="item_percentage_short_text" translatable="false">%1$d %%</string>
    <string name="jar">jar</string>
    <string name="item_name_in_fragment_text">( %1$s )</string>
    <string name="save_settings_text">SAVE</string>
    <string name="hint_settings_text">Press SAVE Button to save changes</string>
    <string name="restore_settings_text">RESTORE</string>
    <string name="percent_sign_text" translatable="false">%</string>
    <string name="default_settings_text">DEFAULT</string>
    <string name="set_the_percentage_of_jars">Set the percentage of JARS</string>
    <string name="cash_balance_text"><b>%1$s</b> $</string>
    <string name="total_cash_balance_text"><b>Total: %1$.2f</b> $</string>
    <string name="enter_sum_text">Enter a sum</string>
    <string name="choose_jar_text">You must choose a jar!</string>
    <string name="add_a_new_cash">ADD A NEW CASH</string>
    <string name="item_id_of_cash">Cashflow ID</string>
    <string name="item_date_of_cash">Date of cashflow</string>
    <string name="item_sum_of_cash">Cash SUM</string>
    <string name="item_jar_of_cash">Cashflow\'s Jar</string>
    <string name="item_perc_of_cash">Cashflow\'s jar Percentage</string>
    <string name="no_cashflows">No cashflow</string>
    <string name="added_sum_text">New Sum Added</string>
    <string name="not_added_sum_text">Not added, not enough cash in jar</string>
    <string name="spend_a_cash_text">Spend a cash</string>
    <string name="to_all_jars_by_percentage">To all JARS by %</string>
    <string name="exit_text">Close SixJars</string>
    <string name="want_exit_text">Do you really want to exit?</string>
    <string name="yes_text">YES</string>
    <string name="no_text">NO</string>
    <string name="enter_widget_name_text">Enter a widget name</string>
    <string name="tutorial_title_text" formatted="false">JARS budgeting</string>
    <string name="click_to_exit_text">Press back one more time to exit</string>
    <string name="text_0" translatable="false">0</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="text_1" translatable="false">1</string>
    <string name="text_2" translatable="false">2</string>
    <string name="text_3" translatable="false">3</string>
    <string name="text_4" translatable="false">4</string>
    <string name="text_5" translatable="false">5</string>
    <string name="text_6" translatable="false">6</string>
    <string name="text_7" translatable="false">7</string>
    <string name="text_8" translatable="false">8</string>
    <string name="text_9" translatable="false">9</string>
    <string name="text_point" translatable="false">.</string>
    <string name="new_income_text">New income</string>
    <string name="text_back">BACK</string>
    <string name="backspace_text" translatable="false"><![CDATA[<<]]></string>
    <string name="cash_id_text">Details of Cashflow ID : %1$s</string>
    <string name="edited_cashflow">Cashflow edited</string>
    <string name="text_negative" translatable="false">-</string>
    <string name="delete_not_edit_text">To delete a cashflow, press back and make a long press on cashflow in list</string>
    <string name="delete_cash_info_text">To delete a cashflow make a long press on item</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="statistics_text">Statistics</string>
    <string name="tutorial_text">Tutorial</string>
    <string name="jars_text">JARS</string>
    <string name="percentage_toast_text">Jar\'s percent explaining what sum goes to jar with new total income.</string>
    <string name="account_name">Account name</string>
    <string name="statistics_pie_title">\nPayments</string>
    <string name="statistics_pie_hole_title">Payments \n in jars</string>
    <string name="statistics">STATISTICS</string>
    <string name="statistics_bar_title">Income v</string>
    <string name="no_data_chart_text">NO DATA</string>
    <string name="statistics_payments_text">Payments</string>
    <string name="statistics_income_text">Income</string>
    <string name="statistics_bar_title2">s Payments</string>
    <string name="tutorial_main_text">"   Author of \"jars\" method offers to get 6 \"jars\" (it can be not only jar or jug, but even an envelope) and sign each of them in accordance to the purposes for what money will be spent out of the jar:"</string>
    <string name="tutorial_aftertitle_text">This method is an evolution of envelope method. The classical method of envelopes used by our mothers and grandmothers, it\'s simple and effective. The idea is very simple - start up a special envelope for each major category of spending, signed by name and amount. If you run out of money in the \"Food\" envelope, you will have to take them out from other less important envelope. For the next month you should review the amount of envelope. You can put savings or spend the money left in an envelope at the end of the month.</string>
    <string name="tutorial_description1_text" formatted="false">    The necessity spending (Necessity Account, NEC) - 55%. This jar contains money for most important expenses: food, utilities, clothing, rent, transport, medicine, etc.</string>
    <string name="tutorial_description2_text" formatted="false">    Entertainment Account (Play Account, PLAY) - 10% .Money from this jar you can spend to go to a Japanese restaurant, bowling or movie. Fun, in over words…</string>
    <string name="tutorial_description3_text" formatted="false">    Account for gifts and charity (Give Account, GIVE) - 5%. Money from this jar can be used for charity or gifts to friends, family, neighbors.</string>
    <string name="tutorial_description4_text" formatted="false">    Educational expenses jar (Education Account, EDU) - 10%.  You can spend money from this jar to education, directly to tutoring or college, or purchase a books, films, trainings etc.</string>
    <string name="tutorial_description5_text" formatted="false">    Reserve fund and the account for big purchases (Long Term Saving for Spending Account, LTSS) - 10%. This account accumulates money that can be used both as a \"safety cushion\" (reserve fund) and as savings for big purchases (vacation, car, TV, dentistry, etc.).</string>
    <string name="tutorial_description6_text" formatted="false">    Financial Freedom Account (Financial Freedom Account, FFA) - 10%. This jar is the key to your financial well-being. Money from this jar is not wasted in any condition. It\'s used for investment and passive income source.</string>
    <string name="tutorial_description7_text" formatted="false">    This budgeting scheme is consistent with the method of envelopes: each month the entire gross income is distributing to jars: first for current necessities jar, then at the jar of financial freedom, and then to the rest of the account. Of course, you can get other percentages between jars, but it\'s close enough to the ideal structure of spending and investment, and you should strive for it.</string>
    <string name="tutorial_description8_text" formatted="false">
        WHY method of 6 jars are so effective?\n\nSimplicity. No need to be a rocket scientist to distribute the money in 6 categories.\nIt will take one to two minutes for everything. And at the same time - you effectively manage your family budget. All you need is to distribute the money in several categories and stick to simple rules. Or rather one rule.\n\"Do not take money for expenses from a jar intended for other expenses.\"\nYou will learn to live within your incomes. At least you will try. Maybe you\'ll refuse loans and borrow money.</string>
    <string name="no_pour_text">Don\'t pour the rest of previous incomes to any jar</string>
    <string name="pour_button_text">Finish adding income</string>
    <string name="not_from_ffa_text">Rest of all jars EXCEPT FFA goes to LTSS</string>
    <string name="global_pour_to_ffa_text">Rest of all jars goes to FFA</string>
    <string name="pour_to_ffa_text">Rest of jar goes to FFA</string>
    <string name="pour_to_ltss_text">Rest of jar goes to LTSS</string>
    <string name="no_poured_text">Not poured a rest of previous incomes</string>
    <string name="poured_text">Rest of previous incomes poured in</string>
    <string name="global_pour_to_ltss_text">Rest of all jars goes to LTSS (except FFA)</string>
    <string name="title_pour_in_jar">Pour the rest of previous incomes in savings jar?</string>
    <string name="changes_saved_text">Changes are saved.</string>
    <string name="changes_not_saved_text">Changes are not saved. Sum of percentage must be 100%</string>
    <string name="save_base_text">Save database</string>
    <string name="restore_base_text">Restore database</string>
    <string name="share_text">Share</string>
    <string name="share_title_text">@string/share_text</string>
    <string name="share_message_text">I\'m saving my money with SixJars</string>
    <string name="share_cancel_text">Don\'t want to share</string>
    <string name="send_base_text">Send a database copy</string>
    <string name="rest_of_cash">Rest:\n$s $</string>
</resources>