<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share_text"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save_base"
        android:title="@string/save_base_text"
        app:icon="@drawable/ic_archive_white_24dp"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_restore_base"
        android:title="@string/restore_base_text"
        app:icon="@drawable/ic_unarchive_white_24dp"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/action_send_base"
        android:title="@string/send_base_text"
        app:icon="@drawable/ic_unarchive_white_24dp"
        app:showAsAction="never|withText" />
</menu>
