<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/itemFragmentCardJars"
        style="@style/AppTheme.Card.Margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_large"
        android:padding="@dimen/margin_normal"
        app:cardCornerRadius="@dimen/margin_normal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_normal">

            <TextView
                android:id="@+id/exitDialogText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/want_exit_text"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/item_name_dimension"
                android:textStyle="bold" />

            <Button
                android:id="@+id/exitNoButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/exitDialogText"
                android:layout_margin="@dimen/margin_large"
                android:background="@drawable/jar_widget_bg"
                android:text="@string/no_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/item_balance_dimension"
                android:textStyle="bold" />

            <Button
                android:id="@+id/exitYesButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/exitDialogText"
                android:layout_margin="@dimen/margin_large"
                android:background="@drawable/jar_widget_bg"
                android:text="@string/yes_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/item_balance_dimension"
                android:textStyle="bold" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</FrameLayout>